fix scroll spy bug with left border jump before scroll position is set

--- a/scss/_scrollSpy.scss
+++ b/scss/_scrollSpy.scss
@@ -3,3 +3,9 @@
   padding-left: 5px;
   margin-left: -15px;
 }
+[id*="scrollSpy"] {
+  &:hover {
+    cursor: pointer;
+    color: $dark-grey;
+  }
+}
